--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
         <junit.version>5.9.2</junit.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>u-team-repo</id>
+            <url>https://repo.u-team.info/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -33,6 +40,12 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.15.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.hycrafthd</groupId>
+            <artifactId>minecraft_authenticator</artifactId>
+            <version>3.0.5</version>
         </dependency>
 
         <dependency>
